# minimal-fastapi-app

./: .dockerignore  .env.development  .env.example  .env.production  .gitignore  Dockerfile  README.md  compose.override.yaml  compose.yaml  dev.Dockerfile  nginx.conf  postman.json  promtail-config.yaml  pyproject.toml  pytest.ini
migrations/: README.md
src/minimal_fastapi_app/: association_tables.py  main.py
src/minimal_fastapi_app/core/: association_tables.py  config.py  db.py  exceptions.py  logging.py  middleware.py  models.py
src/minimal_fastapi_app/projects/: models.py  router.py  schemas.py  service.py
src/minimal_fastapi_app/users/: models.py  router.py  schemas.py  service.py
tests/: conftest.py  test_config.py  test_main.py  test_project_user_endpoints.py  test_projects.py  test_user_project.py  test_user_project_relationship.py  test_users.py
