[project]
name = "minimal-fastapi-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "James U", email = "tenseventyseven@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "pydantic-settings>=2.9.1",
    "pydantic[email]>=2.11.5",
    "sqlalchemy[asyncio]>=2.0.41",
    "opentelemetry-api>=1.34.0",
    "opentelemetry-sdk>=1.34.0",
    "opentelemetry-instrumentation-fastapi>=0.55b0",
    "structlog>=24.1.0",
    "asyncpg>=0.30.0",
]

[project.scripts]
minimal-fastapi-app = "minimal_fastapi_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.13",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
]
